# fractal

./: CMakeLists.txt  DragonCurve.cpp  DragonCurve.h  Settings.h  Vec2d.cpp  Vec2d.h  main.cpp
lib/poly/: poly.h
